# chess-pipeline

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  build_stockfish.sh  chess_games.sql  chess_pipeline.py  configs.py  docker-compose.yml  explore-data.ipynb  newsletter.py  postgres_templates.py  pyproject.toml  requirements.txt  setup_postgresql.sql  visitors.py
.github/workflows/: build.yml
analyses/bayes_wp_model.trace/0/: metadata.json
analyses/bayes_wp_model.trace/1/: samples.npz
analyses/bayes_wp_model.trace/2/: metadata.json
assorted-sql/: add_player_rating.sql  add_queen_exchange.sql  copy_eco_codes.sql  drop_game_evals_with_na.sql
cloud_function/: handler.py
content/: eco-dictionary.csv
db/assorted_sql/: copy_eco_codes.sql  copy_stockfish_evals.sql  copy_win_probabilities.sql  get_positions_and_evals.sql
db/initdb/: 00-create_users.sh  setup_postgresql.sql
db/tables/: game_evals_view.sql  win_probabilities_eval_only.sql
doc/: centipawn-notes.md
pipeline_import/: postgres_templates.py  visitors.py
res/analyses/: lr_wp_model.joblib  win-probability-by-stockfish-eval.ipynb  win-probability-calc.ipynb
res/analyses/bayes_wp_model.trace/0/: samples.npz
res/analyses/bayes_wp_model.trace/1/: metadata.json
res/analyses/bayes_wp_model.trace/2/: samples.npz
res/analyses/bayes_wp_model.trace/3/: metadata.json  samples.npz
res/analyses/win_probability/src/data/v1/: create_dataset.py
res/analyses/win_probability/v1/report/: changes.md
res/analyses/win_probability/v1/src/data/: create_dataset.py
res/analyses/win_probability/v1/src/features/: create_features.py
res/analyses/win_probability/v2/: win-probability-by-stockfish-eval-clocks.ipynb
res/analyses/win_probability/v2/report/: changes.md
res/analyses/win_probability/v3/report/: changes.md
res/analyses/win_probability/v3/src/: make.sh
scripts/: create-schema.sh  rerun_stockfish.py  setup_postgresql.sql  sf-benchmark.py
scripts/assorted-sql/: add_promotion_columns.sql  copy_eco_codes.sql  copy_win_probabilities.sql  drop_columns.sql
src/: chess_pipeline.py  docker_entrypoint.py  feature_engineering.py  inference.py  newsletter.py  newsletter_entrypoint.py
src/pipeline_import/: api.py  configs.py  models.py  newsletter_utils.py  plots.py  postgres_templates.py  transforms.py  visitors.py  wp_model.pckl
src/table-sql/: chess_games.sql  eco_codes.sql  game_evals_view.sql  game_materials.sql  game_positions.sql  position_evals.sql  win_probabilities.sql
src/utils/: db.py  newsletter.py  output.py  types.py
src/vendors/: lichess.py  stockfish.py
table-sql/: castling.sql  chess_games.sql  game_clocks.sql  game_evals.sql  game_moves.sql
tests/: conftest.py  test_feature_engineering.py  test_plots.py  test_transforms.py  test_visitors.py
tests/__snapshots__/: test_feature_engineering.ambr  test_plots.ambr
tests/vendors/: test_lichess.py  test_stockfish.py
tests/vendors/__snapshots__/: test_lichess.ambr
(+14 files in other folders)
