[tool.poetry]
name = "chess-pipeline"
version = "0.1.0"
description = ""
authors = ["Guido Petri <18634426+guidopetri@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.6.2"
luigi = "^3.3.0"
pandas = "^2.0.3"
python-chess = "^0.28.3"
python-lichess = "^0.10"
sendgrid = "6.0.5"
stockfish = "3.5.0"
sqlalchemy = "1.3.0"
seaborn = "^0.10.0"
beautifulsoup4 = "^4.8.0"
scikit-learn = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pyright = "^1.1.351"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
