[tool.poetry]
name = "chess-pipeline"
version = "0.1.0"
description = ""
authors = ["Guido Petri <18634426+guidopetri@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.6.2"
luigi = "3.5.1"
pandas = "^2.2.2"
chess = "^1.10.0"
python-lichess = "^0.10"
sendgrid = "6.0.5"
stockfish = "3.5.0"
sqlalchemy = "^2.0.32"
seaborn = "^0.13.0"
beautifulsoup4 = "^4.8.0"
scikit-learn = "^1.5.0"
more-itertools = "^10.4.0"
valkey = {extras = ["libvalkey"], version = "^6.0.2"}
adbc-driver-manager = "^1.3.0"
adbc-driver-postgresql = "^1.3.0"
pyarrow = "^18.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pyright = "^1.1.351"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
pre-commit = "^3.7.0"
ruff = "^0.4.1"
pytest-mock = "^3.14.0"
syrupy = "^4.6.1"
freezegun = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
ignore = ["./pipeline_import/postgres_templates.py", "./tests"]
useLibraryCodeForTypes = false

[tool.ruff]
line-length = 79

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
preview = true

[tool.coverage.run]
omit = ["/app/tests/*", "/app/chess_pipeline.py", "/app/pipeline_import/configs.py", "/app/pipeline_import/postgres_templates.py", "/app/newsletter.py"]

[tool.coverage.report]
include_namespace_packages = true
